tests/invalid/Rational_Invalid_1.whiley
function f(real r) -> int:
    int x, bool y
    x / y = r
    return 1